--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -25,8 +25,7 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登陆</a> </li>
-                <li class="dropdown">
+                <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">我<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -34,6 +33,9 @@
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
                     </ul>
+                </li>
+                <li th:if="${session.user == null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=95ee29c50a7aab686664&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登陆</a>
                 </li>
             </ul>
         </div>
